Remove add-export