@@ -101,8 +101,6 @@ compileJava {
       'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
       '--add-exports',
       'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-      '--add-exports',
-      'jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
     ]
   }
   options.failOnError = true
